# VisualSLAM

chapters/chapter2/: CMakeLists.txt  README.md  helloSLAM.cpp  libHelloSLAM.cpp
chapters/chapter3/pangolinExample/: CMakeLists.txt  plotTrajectory.cpp
chapters/chapter3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
chapters/chapter4/: CMakeLists.txt  useSophus.cpp
chapters/chapter5/imageBasics/: CMakeLists.txt  imageBasics.cpp
chapters/chapter5/rgbd/: CMakeLists.txt  joinMap.cpp
chapters/chapter5/stereo/: CMakeLists.txt  stereoVision.cpp
chapters/chapter6/: CMakeLists.txt  ceresCurveFitting.cpp  gaussNewton.cpp
